fix for modal causing screen to shift left

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -21,6 +21,14 @@ a {
   outline: none !important;
 }
 
+.modal {
+  overflow-y: auto;
+}
+
+.modal-open {
+  overflow: auto;
+}
+
 // VARS
 $light-gray: #C4C5CA;
 $header-height: 68px;
